<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MedicineDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="250dp" />

                <com.viewpagerindicator.CirclePageIndicator
                    android:id="@+id/pageIndicator"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:padding="10dip"
                    app:centered="true"
                    app:fillColor="@android:color/black"
                    app:pageColor="#fff"
                    app:snap="false" />
            </LinearLayout>

            <ImageView
                android:id="@+id/noImage"
                android:layout_width="fill_parent"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher"
                android:scaleType="centerCrop"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="15dp">

                <TextView
                    android:id="@+id/productName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Product Name"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/productDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="3sp"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/descriptionText"
                    android:text="@string/description"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="16dp"/>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp">
                    <TableRow
                        android:id="@+id/typeView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:visibility="gone">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginRight="16dp"
                            android:text="@string/type"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/productType"
                            android:textSize="16sp"
                            android:layout_weight="1"
                            android:text="Golongan"
                            android:textColor="@android:color/black"/>
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/ingredientsView"
                        android:layout_marginBottom="8dp"
                        android:visibility="gone">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginRight="16dp"
                            android:text="@string/ingredients"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/productIngredients"
                            android:textSize="16sp"
                            android:layout_weight="1"
                            android:text="Bahan Aktif"
                            android:textColor="@android:color/black"/>
                    </TableRow>
                    <TableRow
                        android:id="@+id/categoryView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:visibility="gone">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginRight="16dp"
                            android:text="@string/category"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/productCategory"
                            android:textSize="16sp"
                            android:layout_weight="1"
                            android:text="Kategori"
                            android:textColor="@android:color/black"/>
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:id="@+id/advantagesView"
                        android:visibility="gone">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginRight="16dp"
                            android:text="@string/advantage"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/productAdvantage"
                            android:textSize="16sp"
                            android:layout_weight="1"
                            android:text="Manfaat"
                            android:textColor="@android:color/black"/>
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginRight="16dp"
                            android:text="@string/consumed_by"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/productConsumedBy"
                            android:textSize="16sp"
                            android:layout_weight="1"
                            android:text="Dewasa"
                            android:textColor="@android:color/black"/>
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginRight="16dp"
                            android:text="@string/shape"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/productShape"
                            android:textSize="16sp"
                            android:layout_weight="1"
                            android:text="Tablet"
                            android:textColor="@android:color/black"/>
                    </TableRow>
                </TableLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/productMoreDetails"
                    android:layout_marginBottom="15dp"
                    android:textSize="16sp"
                    android:text="@string/more_details"
                    android:textColor="#115DF3" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>